Fix #46: Make #inputField box sync with parent.
We need the textarea to be padded, but we still want its
total width to be 100%. CSS3 has a thing for that, which
is called box-sizing.

This is mainly a visual fix in chromium, where the focused
textarea gets a white outline. It's invisible in most other
browsers.

--- a/css/global/layout.css
+++ b/css/global/layout.css
@@ -60,6 +60,7 @@ h3 { white-space: nowrap }
   height:48px;
 }
 #inputField {
+  box-sizing: border-box;
   resize: none;
   padding:5px;
   width:100%;
